examples/test/testpolicy635.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy635
  namespace: namespace495
spec:
  podSelector:
    matchLabels:
      key47: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value20
      podSelector:
        matchLabels:
          key42: value8
          key14: value36
          key17: value25
